@@ -436,11 +436,16 @@ private:
 
 
 /// Input stream that gets its data from a result field
-/** Use this class exactly as you would any other istream to read data from a
- * field.  All formatting and streaming operations of `std::istream` are
- * supported.  What you'll typically want to use, however, is the fieldstream
- * alias (which defines a @ref basic_fieldstream for `char`).  This is similar
- * to how e.g. `std::ifstream` relates to `std::basic_ifstream`.
+/** @deprecated To convert a field's value string to some other type, e.g. to
+ * an `int`, use the field's `as<...>()` member function.  To read a field
+ * efficiently just as a string, use its `c_str()` or its
+ * `as<std::string_vview>()`.
+ *
+ * Works like any other istream to read data from a field.  It supports all
+ * formatting and streaming operations of `std::istream`.  For convenience
+ * there is a fieldstream alias, which defines a @ref basic_fieldstream for
+ * `char`.  This is similar to how e.g. `std::ifstream` relates to
+ * `std::basic_ifstream`.
  *
  * This class has only been tested for the char type (and its default traits).
  */
@@ -456,6 +461,7 @@ public:
   using pos_type = typename traits_type::pos_type;
   using off_type = typename traits_type::off_type;
 
+  [[deprecated("Use field::as<...>() or field::c_str().")]]
   basic_fieldstream(field const &f) : super{nullptr}, m_buf{f}
   {
     super::init(&m_buf);
@@ -465,10 +471,17 @@ private:
   field_streambuf<CHAR, TRAITS> m_buf;
 };
 
+
+/// @deprecated Read a field using `field::as<...>()` or `field::c_str()`.
 using fieldstream = basic_fieldstream<char>;
 
-/// Write a result field to any type of stream
-/** This can be convenient when writing a field to an output stream.  More
+
+/// Write a result field to any type of stream.
+/** @deprecated The C++ streams library is not great to work with.  In
+ * particular, error handling is easy to get wrong.  So you're probably better
+ * off doing this by hand.
+ *
+ * This can be convenient when writing a field to an output stream.  More
  * importantly, it lets you write a field to e.g. a `stringstream` which you
  * can then use to read, format and convert the field in ways that to() does
  * not support.
@@ -489,6 +502,7 @@ using fieldstream = basic_fieldstream<char>;
  * ```
  */
 template<typename CHAR>
+[[deprecated("Do this by hand, probably with better error checking.")]]
 inline std::basic_ostream<CHAR> &
 operator<<(std::basic_ostream<CHAR> &s, field const &value)
 {
